{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 19,
  "lineage": "16a5b6eb-8420-b7c8-badc-99b2726c79b6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/networkInterfaces/infmon",
            "internal_domain_name_suffix": "py4fvdyn1ptevle1l3zm4ri33c.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "infmon",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/publicIPAddresses/infmon",
                "subnet_id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/virtualNetworks/infmon/subnets/infmon"
              }
            ],
            "location": "koreacentral",
            "mac_address": "00-22-48-F8-34-23",
            "name": "infmon",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "infmon",
            "virtual_machine_id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Compute/virtualMachines/infmon"
          },
          "dependencies": [
            "azurerm_public_ip.rg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.rg",
            "azurerm_virtual_network.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/networkInterfaces/infmon|/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/networkSecurityGroups/infmon-nsg",
            "network_interface_id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/networkInterfaces/infmon",
            "network_security_group_id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/networkSecurityGroups/infmon-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.rg",
            "azurerm_network_security_group.rg",
            "azurerm_public_ip.rg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.rg",
            "azurerm_virtual_network.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/networkSecurityGroups/infmon-nsg",
            "location": "koreacentral",
            "name": "infmon-nsg",
            "resource_group_name": "infmon",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "30663",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-ArgoCD",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "30933",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Prometheus",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "31176",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Grafana",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "30663",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/networkSecurityGroups/infmon-nsg/securityRules/Allow-ArgoCD",
            "name": "Allow-ArgoCD",
            "network_security_group_name": "infmon-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "infmon",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.rg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "31176",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/networkSecurityGroups/infmon-nsg/securityRules/Allow-Grafana",
            "name": "Allow-Grafana",
            "network_security_group_name": "infmon-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "infmon",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.rg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "30933",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/networkSecurityGroups/infmon-nsg/securityRules/Allow-Prometheus",
            "name": "Allow-Prometheus",
            "network_security_group_name": "infmon-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "infmon",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.rg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/networkSecurityGroups/infmon-nsg/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "infmon-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "infmon",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.rg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/publicIPAddresses/infmon",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.230.3.68",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "infmon",
            "resource_group_name": "infmon",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/virtualNetworks/infmon/subnets/infmon",
            "name": "infmon",
            "resource_group_name": "infmon",
            "virtual_network_name": "infmon"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8f5a3c7e-db0d-4ae6-ac9b-5f72cf451dea",
            "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/virtualNetworks/infmon",
            "location": "koreacentral",
            "name": "infmon",
            "resource_group_name": "infmon",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/f9e52baa-506a-4ef6-859c-a459fd2f3865/resourceGroups/infmon/providers/Microsoft.Network/virtualNetworks/infmon/subnets/infmon",
                "name": "infmon"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}